...
    case alpineShire = "Bright" // alpineshire
    case ballarat = "Ballarat"
    case melbourne = "Melbourne"
    case glenorchy = "Glenorchy"
    case noosa = "Noosa"
    case greaterDandenong = "Melbourne SE"
    case canberra = "Canberra"

    func title() -> String {
        return self.rawValue
    }

    func subtitle() -> String {
...
            return "Victoria"
        case .glenorchy:
            return "Tasmania"
        case .noosa:
            return "Queensland"
        case .canberra:
            return "ACT"
        }
    }
}

protocol BBQListProvider {
    func allBbqs() -> [BBQ]
...
