...

    func makeAreasModuleAndReturnViewController(showMapAction: @escaping RouterAreaSelectionAction, showAddAction: @escaping RouterAddBbqAction) -> AreasViewController {

        let tableViewDataSource = TableViewDataSource<AreasViewController>()
        let controller = viewControllerFactory.makeAreasViewController(dataSource: tableViewDataSource, addBbqAction: showAddAction)

        controller.title = "BBQ Areas"

        let presenter = AreasPresenter(interface: controller, routerShowMapAction: showMapAction)

        let interactor = AreasInteractor(output: presenter)

        controller.configure(interactor: interactor)
...
        let mapInteractor = BBQMapInteractor(output: presenter, bbqListProvider: bbqListProvider, userLocation: requestUsersLocation)

        let addInteractor = BBQAddInteractor(bbqStorage: bbqStorage, output: presenter)

        controller.mapInteractor = mapInteractor
        controller.addInteractor = addInteractor
        controller.title = "Added BBQs"
        
        return controller
    }


    func makeMapModuleAndReturnViewController(bbqArea: BBQArea, showDetailsAction: @escaping RouterBBQSelectionAction) -> BBQMapViewController {
...
