...

final class BBQMapPresenter: BBQMapInteractorOutput, BBQAddInteractorOutput {

    private weak var output: BBQMapPresenterOutput?
    private let action: RouterBBQSelectionAction

    private let addBBQsAlertTitle = "Add your own BBQ's"
    private let addBBQsAlertMessage = "Use a long press to add your own BBQ location"
    private let locationDeniedTitle = "location services off"
    private let locationDeniedMessage = "please go to settings and allow user location to be determined"



...
